# pdfium_bck

./: .gitattributes  .gitignore  .gn  .vpython3  AUTHORS  BUILD.gn  CONTRIBUTING.md  DEPS  DIR_METADATA  LICENSE  OWNERS  PRESUBMIT.py  PRESUBMIT_test.py  PRESUBMIT_test_mocks.py  README.md  bookmark_state.patch  codereview.settings  commit-queue.cfg  cr-buildbucket.cfg  groups  luci-logdog.cfg  luci-milo.cfg  luci-scheduler.cfg  main.star  pdfium.gni  pdfium_unsafe_buffers_paths.txt  presubmit_test_mocks.py  project.config  sorExpress  tricium-prod.cfg  tricium.config
build_overrides/: build.gni  partition_alloc.gni  pdfium.gni
build_overrides/compiler/: BUILD.gn
core/base/: BUILD.gn  bits.h  check.h  check_op.h  compiler_specific.h  component_export.h  immediate_crash.h  no_destructor.h  notreached.h  sys_byteorder.h  template_util.h
core/base/containers/: adapters.h  contains.h  span.h
core/base/debug/: alias.cc  alias.h
core/base/memory/: aligned_memory.cc  aligned_memory.h  ptr_util.h
core/base/numerics/: checked_math.h  checked_math_impl.h  clamped_math.h  clamped_math_impl.h  safe_conversions.h  safe_conversions_arm_impl.h  safe_conversions_impl.h  safe_math.h  safe_math_arm_impl.h  safe_math_clang_gcc_impl.h  safe_math_shared_impl.h
core/base/test/: scoped_locale.cc  scoped_locale.h
core/base/win/: scoped_select_object.h  win_util.cc  win_util.h
fpdfsdk/: #cpdfsdk_pageview.h#  #fpdf_thumbnail_embeddertest.cpp#  BUILD.gn  DEPS  cfx_systemhandler.cpp  cfx_systemhandler.h  cpdf_annotcontext.cpp  cpdfsdk_actionhandler.cpp  cpdfsdk_actionhandler.h  cpdfsdk_annot.cpp  cpdfsdk_annot.h  cpdfsdk_annothandlermgr.cpp  cpdfsdk_annothandlermgr.h  cpdfsdk_annotiteration.cpp  cpdfsdk_annotiteration.h  cpdfsdk_annotiterator.cpp  cpdfsdk_annotiterator.h  cpdfsdk_annotiterator_embeddertest.cpp  cpdfsdk_appstream.cpp  cpdfsdk_appstream.h  cpdfsdk_baannot.cpp  cpdfsdk_baannot.h  cpdfsdk_baannot_embeddertest.cpp  cpdfsdk_baannothandler.cpp  cpdfsdk_baannothandler.h  cpdfsdk_baannothandler_embeddertest.cpp  cpdfsdk_customaccess.cpp  cpdfsdk_customaccess.h  cpdfsdk_fieldaction.h  cpdfsdk_filewriteadapter.cpp  cpdfsdk_filewriteadapter.h  cpdfsdk_formfillenvironment.cpp  cpdfsdk_formfillenvironment.h  cpdfsdk_helpers.cpp  cpdfsdk_helpers.h  cpdfsdk_helpers_unittest.cpp  cpdfsdk_interactiveform.cpp  cpdfsdk_interactiveform.h  cpdfsdk_interform.cpp  cpdfsdk_interform.h  (+100 more)
fpdfsdk/api/: document.cpp  pdfium.cpp
fpdfsdk/formfiller/: BUILD.gn  cba_fontmap.cpp  cba_fontmap.h  cffl_button.cpp  cffl_button.h  cffl_checkbox.cpp  cffl_checkbox.h  cffl_combobox.cpp  cffl_combobox.h  cffl_combobox_embeddertest.cpp  cffl_fieldaction.h  cffl_formfield.cpp  cffl_formfield.h  cffl_formfiller.cpp  cffl_formfiller.h  cffl_interactiveformfiller.cpp  cffl_interactiveformfiller.h  cffl_listbox.cpp  cffl_listbox.h  cffl_perwindowdata.cpp  cffl_privatedata.cpp  cffl_privatedata.h  cffl_pushbutton.cpp  cffl_pushbutton.h  cffl_radiobutton.cpp  cffl_radiobutton.h  cffl_textfield.cpp  cffl_textfield.h  cffl_textobject.cpp  cffl_textobject.h
fpdfsdk/fpdfxfa/: BUILD.gn  cpdfxfa_annot.cpp  cpdfxfa_annot.h  cpdfxfa_annothandler.cpp  cpdfxfa_annothandler.h  cpdfxfa_context.cpp  cpdfxfa_context.h  cpdfxfa_docenvironment.cpp  cpdfxfa_docenvironment.h  cpdfxfa_extension.cpp  cpdfxfa_extension.h  cpdfxfa_page.cpp  cpdfxfa_page.h  cpdfxfa_widget.cpp  cpdfxfa_widget.h  cpdfxfa_widgethandler.cpp  cpdfxfa_widgethandler.h  cxfa_fwladaptertimermgr.cpp  cxfa_fwladaptertimermgr.h
fpdfsdk/pdf/: BUILD.gn  cpdfsdk_actionhandler.cpp  cpdfsdk_actionhandler.h  cpdfsdk_annot.cpp  cpdfsdk_annot.h  cpdfsdk_annothandlermgr.cpp  cpdfsdk_annothandlermgr.h  cpdfsdk_annotiteration.cpp  cpdfsdk_annotiteration.h  cpdfsdk_annotiterator.cpp  cpdfsdk_annotiterator.h  cpdfsdk_annotiterator_embeddertest.cpp  cpdfsdk_appstream.cpp  cpdfsdk_appstream.h  cpdfsdk_baannot.cpp  cpdfsdk_baannot.h  cpdfsdk_baannothandler.cpp  cpdfsdk_baannothandler.h  cpdfsdk_customaccess.cpp  cpdfsdk_customaccess.h  cpdfsdk_fieldaction.cpp  cpdfsdk_fieldaction.h  cpdfsdk_filewriteadapter.cpp  cpdfsdk_filewriteadapter.h  cpdfsdk_formfillenvironment.cpp  cpdfsdk_formfillenvironment.h  cpdfsdk_helpers.cpp  cpdfsdk_helpers.h  cpdfsdk_interactiveform.cpp  cpdfsdk_interactiveform.h  cpdfsdk_pageview.cpp  cpdfsdk_pageview.h  cpdfsdk_widget.cpp  cpdfsdk_widget.h  cpdfsdk_widgethandler.cpp  cpdfsdk_widgethandler.h  ipdfsdk_annothandler.h  ipdfsdk_pauseadapter.cpp  ipdfsdk_pauseadapter.h
fpdfsdk/pwl/: BUILD.gn  cpwl_appstream.cpp  cpwl_appstream.h  cpwl_button.cpp  cpwl_caret.cpp  cpwl_caret.h  cpwl_cbbutton.cpp  cpwl_cblistbox.cpp  cpwl_combo_box.cpp  cpwl_combo_box.h  cpwl_combo_box_edit_embeddertest.cpp  cpwl_combo_box_embeddertest.cpp  cpwl_combo_box_embeddertest.h  cpwl_edit.cpp  cpwl_edit.h  cpwl_edit_ctrl.cpp  cpwl_edit_ctrl.h  cpwl_edit_embeddertest.cpp  cpwl_edit_impl.cpp  cpwl_edit_impl.h  cpwl_edit_selection.h  cpwl_font_map.cpp  cpwl_font_map.h  cpwl_icon.cpp  cpwl_icon.h  cpwl_list_box.cpp  cpwl_list_box.h  cpwl_list_ctrl.cpp  cpwl_list_ctrl.h  cpwl_list_impl.cpp  cpwl_list_impl.h  cpwl_pushbutton.cpp  cpwl_pushbutton.h  cpwl_sbbutton.cpp  cpwl_sbbutton.h  cpwl_scroll_bar.cpp  cpwl_scroll_bar.h  cpwl_special_button.cpp  cpwl_special_button.h  cpwl_special_button_embeddertest.cpp  (+9 more)
fpdfsdk/xfa/: BUILD.gn  cpdfsdk_xfawidget.cpp  cpdfsdk_xfawidget.h  cpdfxfa_context.cpp  cpdfxfa_context.h  cpdfxfa_docenvironment.cpp  cpdfxfa_docenvironment.h  cpdfxfa_page.cpp  cpdfxfa_page.h  cpdfxfa_widgethandler.cpp  cpdfxfa_widgethandler.h
skia/: BUILD.gn  features.gni
skia/config/: SkPdfiumUserConfig.h  SkUserConfig.h
skia/ext/: google_logging.cc  skia_discardable_memory_allocator.cc  skia_discardable_memory_allocator.h
testing/gmock/: BUILD.gn
testing/libfuzzer/: BUILD.gn  fuzzer_test.gni  pdf_bidi_fuzzer.cc  pdf_cmap_fuzzer.cc  pdf_font_fuzzer.cc  pdf_formcalc_fuzzer.cc  pdf_hint_table_fuzzer.cc  pdf_psengine_fuzzer.cc  pdf_streamparser_fuzzer.cc  pdf_xml_fuzzer.cc
xfa/fgas/crt/: BUILD.gn  cfgas_decimal.cpp  cfgas_decimal.h  cfgas_decimal_unittest.cpp  (+10 more)
(+3092 files in other folders)
