# Copyright 2022 The PDFium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/sanitizers/sanitizers.gni")

# Sanitizers replace the allocator, don't use our own.
_is_using_sanitizers = is_asan || is_hwasan || is_lsan || is_tsan || is_msan

# See base/allocator/partition_allocator/external_builds.md
use_allocator_shim_default = !_is_using_sanitizers
use_partition_alloc_as_malloc_default = !_is_using_sanitizers
enable_backup_ref_ptr_support_default = !_is_using_sanitizers
enable_mte_checked_ptr_support_default = false
put_ref_count_in_previous_slot_default = false
enable_backup_ref_ptr_slow_checks_default = false
enable_dangling_raw_ptr_checks_default = false
