# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This file contains PDFium-related build overrides.

# Build PDFium either using a bundled FreeType library, or using the FreeType
# target defined in //build/config/freetype.
# Default: Use a bundled FreeType.
pdf_bundle_freetype_override = true

# Build PDFium either with or without v8 support.
# Default: With V8 support.
pdf_enable_v8_override = true

# Build PDFium either with or without XFA Forms support.
# Default: Without XFA support.
pdf_enable_xfa_override = false

# Build PDFium for Skia (experimental), replacing all PDFium graphics.
# Coexists in build with deprecated AGG graphics.  Default renderer selectable
# at runtime.
pdf_use_skia_override = false

# Build PDFium for Skia (experimental), adding only path support.
# Coexists in build with deprecated AGG graphics.  Default renderer selectable
# at runtime.
pdf_use_skia_paths_override = false
