# Copyright 2019 The PDFium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # Enable experimental SkiaRenderer Dawn backend.
  skia_use_dawn = false
  skia_use_gl = true

  # Skia generating PDF can support sanitizing PDFs.
  skia_support_pdf = !is_ios
}
