# Copyright 2018 The PDFium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/jumbo.gni")
import("../../../pdfium.gni")
import("../../../testing/test.gni")

assert(pdf_enable_xfa)

jumbo_source_set("font") {
  sources = [
    "cfgas_defaultfontmanager.cpp",
    "cfgas_defaultfontmanager.h",
    "cfgas_fontmgr.cpp",
    "cfgas_fontmgr.h",
    "cfgas_gefont.cpp",
    "cfgas_gefont.h",
    "cfgas_pdffontmgr.cpp",
    "cfgas_pdffontmgr.h",
    "fgas_fontutils.cpp",
    "fgas_fontutils.h",
  ]
  deps = [
    "../../../core/fpdfapi/font",
    "../../../core/fpdfapi/page",
    "../../../core/fpdfapi/parser",
    "../../../core/fxcrt",
    "../../../core/fxge",
  ]
  configs += [
    "../../../:pdfium_core_config",
    "../../:xfa_warnings",
  ]
  visibility = [ "../../../*" ]
  if (!is_win) {
    sources += [
      "cfx_fontsourceenum_file.cpp",
      "cfx_fontsourceenum_file.h",
    ]
  }
}
